# esp32-bgt60tr13c-driver

./: .gitignore  CMakeLists.txt  README.md  bgt60tr13c_driver.c
bgt60tr13c-driver/: CMakeLists.txt  bgt60tr13c_driver.c
bgt60tr13c-driver/examples/: sdkconfig  sdkconfig.old
bgt60tr13c-driver/examples/components/infineon_algo/: CMakeLists.txt  infineon_algo.c
bgt60tr13c-driver/examples/main/: CMakeLists.txt  idf_component.yml  main.c  radar_config.c  radar_config.h  test.c
bgt60tr13c-driver/examples/main/i2c/: i2c_slave.c  i2c_slave.h
bgt60tr13c-driver/examples/main/radar_proc/: radar_acquisition.c  radar_acquisition.h  radar_processing.c  radar_processing.h
bgt60tr13c-driver/examples/main/scripts/: plot_viewer.py
bgt60tr13c-driver/include/: bgt60tr13c_config.h  bgt60tr13c_driver.h  bgt60tr13c_regs.h
bgt60tr13c-driver/python-utils/: GENERATED_register_array.txt  README.md  exported_registers.txt  fft_spectro_gen.py  generate_new_registers.py  radar_config.json  simple_radar_calibration.json
bgt60tr13c-driver/python-utils/precomputed_sims/: BGT60TR13C_registers_1RX_1TX_64chirps_32samples.txt  BGT60TR13C_settings_1RX_1TX_64chirps_32samples.json  BGT60TR13C_settings_64chirps_32samples.json
bgt60tr13c-driver/test/: CMakeLists.txt  sdkconfig
bgt60tr13c-driver/test/main/: test.c
examples/main/: CMakeLists.txt  test.c
include/: bgt60tr13c_driver.h  bgt60tr13c_regs.h
python-utils/: README.md  exported_registers.txt
python-utils/precomputed_sims/: BGT60TR13C_registers_1RX_3TX_64chrips_32samples.txt
